<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Varramie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_logout">Log out</string>
    <string name="action_use_facebook">Log in with facebook</string>
    <string name="action_invite_facebook">Invite friends</string>
    <string name="action_poke">Poke others</string>
    <string name="title_activity_empty">EmptyActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_liquid">LiquidActivity</string>
    <string name="facebook_app_id">1606066176318446</string>
    <string name="facebook_no_facebook">Click her to continue without Facebook</string>



</resources>
