<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.spots.varramie.MainActivity" >


    <item
        android:id="@+id/action_invite_facebook"
        android:visible="false"
        android:orderInCategory="100"
        android:title="@string/action_invite_facebook"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_poke"
        android:visible="true"
        android:orderInCategory="100"
        android:title="@string/action_poke"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:visible="false"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_use_facebook"
        android:visible="false"
        android:orderInCategory="100"
        android:title="@string/action_use_facebook"
        app:showAsAction="never"/>

</menu>
